RESOLVED FIXED50235
WebKit 2 does not send touch cancel events correctly between processes
https://bugs.webkit.org/show_bug.cgi?id=50235
Summary WebKit 2 does not send touch cancel events correctly between processes
Benjamin Poulain
Reported 2010-11-30 06:52:37 PST
The conversion between WebPlatformTouchPoint to PlatformTouchPoint misses the TouchCancel case.
Attachments
Patch (1.81 KB, patch)
2010-11-30 06:57 PST, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2010-11-30 06:57:37 PST
WebKit Commit Bot
Comment 2 2010-11-30 19:42:22 PST
Comment on attachment 75141 [details] Patch Rejecting patch 75141 from commit-queue. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=eseidel-cq-sl', 'build', '--no-clean', '--no-update', '--build-style=both']" exit_code: 1 ERROR: Working directory has local commits, pass --force-clean to continue. Full output: http://queues.webkit.org/results/6534001
Eric Seidel (no email)
Comment 3 2010-12-14 01:30:38 PST
Comment on attachment 75141 [details] Patch Sorry about the cq trouble.
WebKit Commit Bot
Comment 4 2010-12-14 04:07:54 PST
The commit-queue encountered the following flaky tests while processing attachment 75141 [details]: inspector/timeline-script-tag-2.html bug 51026 (authors: pfeldman@chromium.org and yurys@chromium.org) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5 2010-12-14 04:11:49 PST
Comment on attachment 75141 [details] Patch Clearing flags on attachment: 75141 Committed r74015: <http://trac.webkit.org/changeset/74015>
WebKit Commit Bot
Comment 6 2010-12-14 04:11:54 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.